--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,13 +5,57 @@ import Layout from '../layouts/Layout.astro';
 <Layout>
   <main class='min-h-screen grid place-content-center'>
     <div class='bg-white rounded-2xl w-80 p-4 flex flex-col gap-4'>
-      <picture class='pb-2'>
-        <img class='rounded-lg' src='/image-qr-code.png' alt='' />
-      </picture>
-      <h1 class='font-bold text-2xl text-center px-2'>Improve your front-end skills by building projects</h1>
-      <p class='text-base text-center text-gray-400 px-6'>
-        Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-      </p>
+      <div id='result' class='bg-[#3685FF] rounded-lg overflow-hidden p-4'>
+        <!-- <img class='rounded-lg' src='/image-qr-code.png' alt='' /> -->
+        <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 33 33' shape-rendering='crispEdges'
+          ><path fill='#3685FF' d='M0 0h33v33H0z'></path><path
+            stroke='#ffffff'
+            d='M4 4.5h7m1 0h3m2 0h3m2 0h7M4 5.5h1m5 0h1m1 0h1m2 0h1m1 0h3m2 0h1m5 0h1M4 6.5h1m1 0h3m1 0h1m1 0h7m3 0h1m1 0h3m1 0h1M4 7.5h1m1 0h3m1 0h1m2 0h4m1 0h3m1 0h1m1 0h3m1 0h1M4 8.5h1m1 0h3m1 0h1m1 0h1m1 0h2m1 0h1m1 0h1m2 0h1m1 0h3m1 0h1M4 9.5h1m5 0h1m2 0h2m2 0h2m1 0h1m1 0h1m5 0h1M4 10.5h7m1 0h1m1 0h1m1 0h1m1 0h1m1 0h1m1 0h7M15 11.5h2m1 0h3M4 12.5h1m2 0h8m1 0h4m1 0h1m2 0h1m1 0h3M6 13.5h1m1 0h2m2 0h2m1 0h2m1 0h2m3 0h5M7 14.5h1m2 0h2m2 0h1m1 0h1m1 0h4m1 0h3m2 0h1M6 15.5h1m2 0h1m2 0h2m2 0h1m1 0h1m3 0h7M4 16.5h2m1 0h2m1 0h4m3 0h4m1 0h2m4 0h1M4 17.5h1m1 0h1m1 0h1m2 0h1m2 0h1m1 0h1m2 0h2m3 0h1m2 0h1M4 18.5h2m2 0h1m1 0h4m4 0h5m1 0h5M4 19.5h1m1 0h1m2 0h1m1 0h3m2 0h3m3 0h2m1 0h2m1 0h1M4 20.5h1m1 0h6m1 0h4m2 0h6m1 0h2M12 21.5h1m2 0h1m4 0h1m3 0h1m1 0h2M4 22.5h7m1 0h3m1 0h3m1 0h1m1 0h1m1 0h1m3 0h1M4 23.5h1m5 0h1m1 0h4m1 0h1m1 0h2m3 0h1m3 0h1M4 24.5h1m1 0h3m1 0h1m1 0h4m1 0h1m1 0h6m3 0h1M4 25.5h1m1 0h3m1 0h1m1 0h1m1 0h1m1 0h2m3 0h2m4 0h2M4 26.5h1m1 0h3m1 0h1m3 0h2m1 0h1m2 0h1m3 0h5M4 27.5h1m5 0h1m4 0h3m4 0h3m1 0h3M4 28.5h7m1 0h2m1 0h3m1 0h2m1 0h1m2 0h1m2 0h1'
+          ></path>
+        </svg>
+      </div>
+      <form id='qr-code-form'>
+        <label class='font-bold text-sm text-left'>
+          <span class='block pb-1'>Introduce URL para crear código QR:</span>
+          <input
+            name='inputurl'
+            class='w-full font-normal border-2 px-4 py-2 rounded-full'
+            type='url'
+            value=''
+            placeholder='https::// ...'
+          />
+          <span class='text-xs text-red-500' id='url-error'></span>
+        </label>
+      </form>
+      <p class='text-sm text-center text-gray-400 px-6'>Frontend mentor modificado</p>
     </div>
   </main>
 </Layout>
+
+<script>
+  const form = document.querySelector('#qr-code-form');
+  const result = document.querySelector('#result');
+
+  form?.addEventListener('submit', (evt) => {
+    evt.preventDefault();
+    let event = evt as any;
+    if (event && event.target && event.target[0] && event.target[0].value) {
+      const url = new URL(event.target[0].value);
+
+      fetch('/api/generate-qr', {
+        method: 'POST',
+        body: JSON.stringify({ url: url.toString() }),
+        headers: {
+          'Content-Type': 'application/json',
+        },
+      })
+        .then((res) => res.json())
+        .then((data) => {
+          if (result) {
+            const { svg } = data;
+            result.innerHTML = svg;
+          }
+        });
+    }
+  });
+</script>
